# battlestar-tux

./: .gitignore  AUTHORS  CELayoutEditor.ini  CMakeLists.txt  DatabaseLayout.md  Game-Design.vym  LICENSE  Makefile.am  Makefile.in  NEWS  ProjectHome.md  README  README.in  ROADMAP  Roadmap.md  STORYLINE  Screenshots.md  SimplexNoiseDistributions.md  Storyline.md  THANKS  THANKS.md  TODO  aclocal.m4  application.py  battlestartux.py  config.h.in  configure  configure.ac  reconf  resources.cfg
Application/: __init__.py
Assemblages/: HexShip.py  Terrain.py
EntitySystem/: Component.py  EntityManager.py  System.py  SystemManager.py  __init__.py
Procedural/: SimplexNoise.cpp  SimplexNoise.h  SimplexNoise.py  SimplexTest.cpp  SimplexTest.py  SimplexTextures.cpp  SimplexTextures.h  SimplexTextures.py
application/: __init__.py
assemblages/: hexship.py  terrain.py
cmake/Modules/: FindFREETYPE.cmake  FindOGRE.cmake  FindOIS.cmake
doc/: Makefile.in
entitysystem/: __init__.py
m4/: Makefile.am  Makefile.in
media-deps/models/: HexCell.blend
media/gui/: CEGUI.project
media/gui/imagesets/: LineSpace.imageset  SleekSpace.imageset
media/models/: HexCell.mesh
procedural/: SimplexTest.py  simplextextures.py
src/: Battle.cpp  Battle.h  CMakeLists.txt  CollisionManager.cpp  CollisionManager.h  Config.cpp  Config.h  Displayable.cpp  Displayable.h  DisplayableList.cpp  DisplayableList.h  Doxyfile  EnemyAircraft.cpp  EnemyAircraft.h  EnemyFighter.cpp  EnemyFighter.h  EnemyFighterList.cpp  EnemyFighterList.h  Explosion.cpp  Explosion.h  ExplosionList.cpp  ExplosionList.h  Fighter.cpp  Fighter.h  FighterAmmo.cpp  FighterAmmo.h  FighterAmmoList.cpp  FighterAmmoList.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameState.cpp  GameState.h  GfxUtils.cpp  GfxUtils.h  Ground.cpp  Ground.h  GroundSegment.cpp  GroundSegment.h  (+42 more)
src/Fighter/: EnemyFighter.cpp  EnemyFighter.h  Fighter.cpp  Fighter.h  FighterController.cpp  FighterController.h  HeroFighter.cpp  HeroFighter.h  HexCell.cpp  HexCell.h  HexCellList.cpp  HexCellList.h  PlayerFighterController.cpp  PlayerFighterController.h  Shield.cpp  Shield.h  ShieldImpact.cpp  ShieldImpact.h  ShieldImpactList.cpp  ShieldImpactList.h  Weapon.cpp  Weapon.h  WeaponSystem.cpp  WeaponSystem.h
src/Fighter/Cells/: ArmorCell.cpp  ArmorCell.h  CoreCell.cpp  CoreCell.h  GenerationCell.cpp  GenerationCell.h  PropulsionCell.cpp  PropulsionCell.h  StorageCell.cpp  StorageCell.h  WeaponCell.cpp  WeaponCell.h
src/Fighter/Weapons/: HeavyLaser.cpp  HeavyLaser.h  HeavyPlasma.cpp  HeavyPlasma.h  Laser.cpp  Laser.h  LightLaser.cpp  LightLaser.h  LightPlasma.cpp  LightPlasma.h  MediumLaser.cpp  MediumLaser.h  MediumPlasma.cpp  MediumPlasma.h  Plasma.cpp  Plasma.h  Turret.cpp  Turret.h
src/HexShip/: EnergyCell.cpp  EnergyCell.h  HexCell.cpp  HexCell.h  HexShip.cpp  HexShip.h
src/Procedural/: Simplex.cpp  Simplex.h  Textures.cpp  Textures.h
src/Structures/: IntegerVector.h  List.cpp  List.h  ListItem.cpp  ListItem.h  StringArray.cpp  StringArray.h  Vector.h
src/UI/: Button.cpp  Button.h  ButtonClickEvent.h  Container.h  CreditsMenu.cpp  CreditsMenu.h  Event.h  EventGenerator.h  EventListener.h  GUI.cpp  GUI.h  HorizontalContainer.cpp  Label.cpp  LoadCampaignMenu.cpp  LoadCampaignMenu.h  MainMenu.cpp  MainMenu.h  NewCampaignMenu.cpp  NewCampaignMenu.h  OpeningMenu.cpp  OpeningMenu.h  SettingsMenu.cpp  SettingsMenu.h  SystemMenu.cpp  SystemMenu.h  VerticalContainer.cpp  VerticalContainer.h  Widget.cpp  Widget.h
src/UI/Primitives/: Button.cpp  Button.h  ButtonClickEvent.h  ButtonClickGenerator.h  ButtonClickListener.h  Container.h  Event.h  EventGenerator.h  EventListener.h  HorizontalContainer.cpp  HorizontalContainer.h  HorizontalPane.cpp  HorizontalPane.h  Label.cpp  Label.h  PlanetButton.cpp  PlanetButton.h  VerticalContainer.cpp  VerticalContainer.h  VerticalPane.cpp  VerticalPane.h  Widget.cpp  Widget.h
src/Universe/: Planet.cpp  Planet.h  SolarSystem.cpp  SolarSystem.h  SpaceGroup.cpp  SpaceGroup.h  SpaceObject.cpp  SpaceObject.h
src/client/: CMakeLists.txt  GameManager.h  GameState.cpp  InputManager.cpp  InputManager.h  PauseState.h  PhysicsManager.cpp  PhysicsManager.h  PlayState.cpp  PlayState.h  UniqueNames.cpp  UniqueNames.h  XmlEntity.cpp
src/client/HexShip/: EnergyCell.cpp  HexCell.cpp  HexCell.h  HexShip.cpp  HexShip.h  WeaponCell.cpp  WeaponCell.h
src/client/HexShip/WeaponCells/: BoltWeaponCell.cpp  BoltWeaponCell.h
src/client/resources/: plugins.cfg  resources.cfg
src/client/resources/gui/: Ogre.fontdef
src/client/resources/overlays/: MousePointer.overlay
src/data/: Makefile.am  Makefile.in
src/data/fonts/: Makefile.am
src/data/gfx/: Makefile.am  Makefile.in
src/lib/btOgre/: BtOgre.cpp  BtOgreExtras.h  BtOgreGP.h  BtOgrePG.h  CMakeLists.txt
src/lib/bullet/: CMakeLists.txt
src/lib/bullet/src/: CMakeLists.txt
src/lib/bullet/src/BulletCollision/: CMakeLists.txt
src/lib/bullet/src/BulletCollision/CollisionDispatch/: btGhostObject.h
src/lib/bullet/src/BulletDynamics/: CMakeLists.txt
src/lib/bullet/src/BulletMultiThreaded/: SpuParallelSolver.cpp  SpuParallelSolver.h
src/lib/bullet/src/BulletSoftBody/: CMakeLists.txt
src/lib/bullet/src/LinearMath/: CMakeLists.txt
src/lib/ftgl/: CMakeLists.txt
src/lib/procedural/: CMakeLists.txt  Textures.h
src/lib/tinyxml/: CMakeLists.txt  tinyxml.h
src/resource-deps/models/: hexcell.blend
src/resources/: ogre.cfg  resources.cfg
src/resources/materials/: IntroState.material  PauseState.material
src/resources/materials/scripts/: HexCell.material  PlayState.material
src/resources/models/: HexCell.mesh  HexCell.mesh.xml
src/resources/overlays/: Info.overlay
src/server/: CMakeLists.txt
src/server/web/: common.php  db.php  default.css  elements.php  headers.php  index.php  information.php  session.php  settings.php
src/server/web/images/emission_lines/: emission_plot.php
utils/: OgreBulletUtils.py  SimplexNoise.cpp  SimplexNoise.py  SimplexTest.cpp  SimplexTest.py  SimplexTextures.h  SimplexTextures.py  __init__.py
(+17 files in other folders)
