# Copyright (C) 2006 Eliot Eshelman <eliot@6by9.net>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

dist_data_DATA =	enemy_fighter_0001-64.png \
			explosion_0001-128.png \
			fighter_0001-64.png \
			ground_0001-256.png \
			ground_0001-512.png \
			hud_shields-64.png \
			laser_0001-64.png
